projects/pearl/surfaces.css
/* ... */
[data-theme="dark"] {
  --surface-bright-bg: #1F1F1F;
  --surface-bright-subtle: #2E2E2E;
  --surface-bright-strong: #3E3E3E;
  --surface-bright-outline: #4E4E4E;
  --surface-bright-separator: #4E4E4E;
  --surface-bright-ct-default: #E8E8E8;
  --surface-bright-ct-strong: #FFFFFF;
  --surface-bright-ct-subtle: #989898;
  --surface-bright-ct-faint: #848484;
  --surface-bright-cm-bg: #111111;
  --surface-bright-cm-bg-hover: #1F1F1F;
  --surface-bright-cm-bg-pressed: #2E2E2E;
  --surface-bright-cm-outline: #4E4E4E;
  --surface-bright-cm-outline-hover: #5E5E5E;
  --surface-bright-cm-outline-pressed: #5E5E5E;
  --surface-bright-cm-separator: #4E4E4E;
  --surface-base-bg: #111111;
  --surface-base-subtle: #1F1F1F;
  --surface-base-strong: #2E2E2E;
  --surface-base-outline: #3E3E3E;
  --surface-base-separator: #3E3E3E;
  --surface-base-ct-default: #DDDDDD;
  --surface-base-ct-strong: #F9F9F9;
  --surface-base-ct-subtle: #8E8E8E;
  --surface-base-ct-faint: #7C7C7C;
  --surface-base-cm-bg: #000000;
  --surface-base-cm-bg-hover: #111111;
  --surface-base-cm-bg-pressed: #1F1F1F;
  --surface-base-cm-outline: #3E3E3E;
  --surface-base-cm-outline-hover: #4E4E4E;
  --surface-base-cm-outline-pressed: #4E4E4E;
  --surface-base-cm-separator: #3E3E3E;
  --surface-dim-bg: #111111;
  --surface-dim-subtle: #1F1F1F;
  --surface-dim-strong: #2E2E2E;
  --surface-dim-outline: #3E3E3E;
  --surface-dim-separator: #3E3E3E;
  --surface-dim-ct-default: #DDDDDD;
  --surface-dim-ct-strong: #F9F9F9;
  --surface-dim-ct-subtle: #8E8E8E;
  --surface-dim-ct-faint: #7C7C7C;
  --surface-dim-cm-bg: #000000;
  --surface-dim-cm-bg-hover: #111111;
  --surface-dim-cm-bg-pressed: #1F1F1F;
  --surface-dim-cm-outline: #3E3E3E;
  --surface-dim-cm-outline-hover: #4E4E4E;
  --surface-dim-cm-outline-pressed: #4E4E4E;
  --surface-dim-cm-separator: #3E3E3E;
  --surface-deep-bg: #000000;
  --surface-deep-subtle: #111111;
  --surface-deep-strong: #1F1F1F;
  --surface-deep-outline: #2E2E2E;
  --surface-deep-separator: #2E2E2E;
  --surface-deep-ct-default: #CFCFCF;
  --surface-deep-ct-strong: #F1F1F1;
  --surface-deep-ct-subtle: #848484;
  --surface-deep-ct-faint: #747474;
  --surface-deep-cm-bg: #000000;
  --surface-deep-cm-bg-hover: #111111;
  --surface-deep-cm-bg-pressed: #1F1F1F;
  --surface-deep-cm-outline: #3E3E3E;
  --surface-deep-cm-outline-hover: #4E4E4E;
  --surface-deep-cm-outline-pressed: #4E4E4E;
  --surface-deep-cm-separator: #3E3E3E;
  --surface-accent-bg: #28000E;
  --surface-accent-subtle: #40011B;
  --surface-accent-strong: #590228;
  --surface-accent-outline: #740436;
  --surface-accent-separator: #740436;
  --surface-accent-ct-default: #FFCED9;
  --surface-accent-ct-strong: #FFF7F9;
  --surface-accent-ct-subtle: #F73080;
  --surface-accent-ct-faint: #DF116F;
  --surface-accent-cm-bg: #000000;
  --surface-accent-cm-bg-hover: #28000E;
  --surface-accent-cm-bg-pressed: #40011B;
  --surface-accent-cm-outline: #740436;
  --surface-accent-cm-outline-hover: #900345;
  --surface-accent-cm-outline-pressed: #900345;
  --surface-accent-cm-separator: #740436;
  --surface-card-bg: #1F1F1F;
  --surface-card-subtle: #2E2E2E;
  --surface-card-strong: #3E3E3E;
  --surface-card-outline: #4E4E4E;
  --surface-card-separator: #4E4E4E;
  --surface-card-ct-default: #E8E8E8;
  --surface-card-ct-strong: #FFFFFF;
  --surface-card-ct-subtle: #989898;
  --surface-card-ct-faint: #848484;
  --surface-card-cm-bg: #111111;
  --surface-card-cm-bg-hover: #1F1F1F;
  --surface-card-cm-bg-pressed: #2E2E2E;
  --surface-card-cm-outline: #4E4E4E;
  --surface-card-cm-outline-hover: #5E5E5E;
  --surface-card-cm-outline-pressed: #5E5E5E;
  --surface-card-cm-separator: #4E4E4E;
  --surface-modal-bg: #2E2E2E;
  --surface-modal-subtle: #3E3E3E;
  --surface-modal-strong: #4E4E4E;
  --surface-modal-outline: #5E5E5E;
  --surface-modal-separator: #5E5E5E;
  --surface-modal-ct-default: #F1F1F1;
  --surface-modal-ct-strong: #FFFFFF;
  --surface-modal-ct-subtle: #A6A6A6;
  --surface-modal-ct-faint: #8E8E8E;
  --surface-modal-cm-bg: #1F1F1F;
  --surface-modal-cm-bg-hover: #2E2E2E;
  --surface-modal-cm-bg-pressed: #3E3E3E;
  --surface-modal-cm-outline: #5E5E5E;
  --surface-modal-cm-outline-hover: #6A6A6A;
  --surface-modal-cm-outline-pressed: #6A6A6A;
  --surface-modal-cm-separator: #5E5E5E;
  --surface-float-bg: #3E3E3E;
  --surface-float-subtle: #4E4E4E;
  --surface-float-strong: #5E5E5E;
  --surface-float-outline: #6A6A6A;
  --surface-float-separator: #6A6A6A;
  --surface-float-ct-default: #F9F9F9;
  --surface-float-ct-strong: #FFFFFF;
  --surface-float-ct-subtle: #B3B3B3;
  --surface-float-ct-faint: #989898;
  --surface-float-cm-bg: #2E2E2E;
  --surface-float-cm-bg-hover: #3E3E3E;
  --surface-float-cm-bg-pressed: #4E4E4E;
  --surface-float-cm-outline: #6A6A6A;
  --surface-float-cm-outline-hover: #747474;
  --surface-float-cm-outline-pressed: #747474;
  --surface-float-cm-separator: #6A6A6A;
  --surface-inverse-bg: #111111;
  --surface-inverse-subtle: #000000;
  --surface-inverse-strong: #000000;
  --surface-inverse-outline: #000000;
  --surface-inverse-separator: #000000;
  --surface-inverse-ct-default: #000000;
  --surface-inverse-ct-strong: #000000;
  --surface-inverse-ct-subtle: #5E5E5E;
  --surface-inverse-ct-faint: #747474;
  --surface-inverse-cm-bg: #000000;
  --surface-inverse-cm-bg-hover: #000000;
  --surface-inverse-cm-bg-pressed: #000000;
  --surface-inverse-cm-outline: #000000;
  --surface-inverse-cm-outline-hover: #000000;
  --surface-inverse-cm-outline-pressed: #000000;
  --surface-inverse-cm-separator: #000000;
}
/* ... */

